--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mysql2": "^1.6.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "sequelize": "^4.41.0"
+    "sequelize": "^4.41.0",
+    "socket.io": "^2.2.0"
   }
 }
